stuff for Google-like results page
git-svn-id: file:///home/kps/seal/gitemp/aimsigh/trunk@20 a6873ebf-e95b-465c-b432-0e6dd3dc36f7

--- a/aimsigh.css
+++ b/aimsigh.css
@@ -11,8 +11,18 @@ img.nasctha {
 	border-style:none;
 	border-width:0px;
 }
-.beag {
+.anbheag {
 	font-size: 0.7em;
+}
+.beag {
+	font-size: 0.9em;
+}
+.uainebeag {
+	font-size: 0.9em;
+	color: #008000;
+}
+.mor {
+	font-size: 1.2em;
 }
 .laraithe {
 	text-align: center;
