--- a/aimsigh.css
+++ b/aimsigh.css
@@ -7,6 +7,19 @@ hr {
 	background-color: blue;
 	height: 2px;
 }
+h1 {
+	font-weight: 300;
+	font-size: 1.2em;
+}
+.navigation {
+	font-weight: 700;
+	font-size: 1.2em;
+	line-height: 175%;
+}
+.content {
+	float: right;
+	width: 75%;
+}
 img.nasctha {
 	border-style:none;
 	border-width:0px;
